--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+bitvec = "1.0.1"
+indicatif = "0.17.7"
+once_cell = "1.18.0"
+regex = "1.9.5"
